Closed Bug 841928 Opened 11 years ago Closed 11 years ago

crash in VBufBackend_gecko_ia2.dll @ ia2AccessibleHypertext::get_hyperlink with NVDA

Categories

(Core :: Disability Access APIs, defect)

21 Branch
x86
Windows 7
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla21
Tracking Status
firefox20 --- unaffected
firefox21 --- fixed

People

(Reporter: scoobidiver, Assigned: tbsaunde)

References

Details

(Keywords: crash, regression)

Crash Data

It has been hit by two users in 21.0a1/20130215.

Signature 	ia2AccessibleHypertext::get_hyperlink(long, IAccessibleHyperlink**) More Reports Search
UUID	97b7d36d-5deb-427b-8d7c-c5d282130215
Date Processed	2013-02-15 21:37:28
Uptime	57
Last Crash	1.2 minutes before submission
Install Age	1.5 hours since version was first installed.
Install Time	2013-02-15 20:05:58
Product	Firefox
Version	21.0a1
Build ID	20130215031040
Release Channel	nightly
OS	Windows NT
OS Version	6.1.7601 Service Pack 1
Build Architecture	x86
Build Architecture Info	GenuineIntel family 6 model 42 stepping 7
Crash Reason	EXCEPTION_ACCESS_VIOLATION_READ
Crash Address	0x0
App Notes 	
AdapterVendorID: 0x8086, AdapterDeviceID: 0x0126, AdapterSubsysID: 00051179, AdapterDriverVersion: 8.15.10.2430
D2D? D2D+ DWrite? DWrite+ D3D10 Layers? D3D10 Layers+ D3D10 Layers- D3D9 Layers? D3D9 Layers- 
Processor Notes 	sp-processor03.phx1.mozilla.com_15319:2008
EMCheckCompatibility	True
Adapter Vendor ID	0x8086
Adapter Device ID	0x0126
Total Virtual Memory	4294836224
Available Virtual Memory	2956201984
System Memory Use Percentage	48
Available Page File	12171751424
Available Physical Memory	4370165760
Accessibility	Active

Frame 	Module 	Signature 	Source
0 	xul.dll 	ia2AccessibleHypertext::get_hyperlink 	accessible/src/windows/ia2/ia2AccessibleHypertext.cpp:53
1 	VBufBackend_gecko_ia2.dll 	VBufBackend_gecko_ia2.dll@0x186b8 	

More reports at:
https://crash-stats.mozilla.com/report/list?signature=ia2AccessibleHypertext%3A%3Aget_hyperlink%28long%2C+IAccessibleHyperlink**%29
totally trivial regression from the nsIWinAccessNode stuff so I just pushed
https://hg.mozilla.org/integration/mozilla-inbound/rev/eba1ef07a9ad
Blocks: 648267
https://hg.mozilla.org/mozilla-central/rev/eba1ef07a9ad
Assignee: nobody → trev.saunders
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in before you can comment on or make changes to this bug.