bug 841928 - fix crash in ia2AccessibleHypertext::get_hyperlink() r=me